Archive2/37/19795e93385fee/output
c ok
main.cpp:5:27: error: ISO C++ does not allow 'main' to be used by a program [-Werror,-Wmain]
    if( argc > 0 ) return main( argc-1, argv+1 ) ;
                          ^
1 error generated.
c++ not ok
